feat: 2.5단계 - 프로젝트 및 메모 파일 이름 변경 기능 구현

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -81,5 +81,6 @@
     </div>
 
     <script src="js/dataLoader.js"></script>
+    <script src="js/uiInteractions.js"></script></script>
 </body>
 </html>
