feat: 중간점검 - dataLoader.js 리팩토링

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -80,7 +80,11 @@
         </div>
     </div>
 
+    <script src="js/windowControls.js"></script>
+    <script src="js/projectManager.js"></script>
+    <script src="js/todoManager.js"></script>
+    <script src="js/tabManager.js"></script>
     <script src="js/dataLoader.js"></script>
-    <script src="js/uiInteractions.js"></script></script>
+    <script src="js/uiInteractions.js"></script>
 </body>
 </html>
