feat: 4단계 - 자동저장

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -84,6 +84,7 @@
     <script src="js/projectManager.js"></script>
     <script src="js/todoManager.js"></script>
     <script src="js/tabManager.js"></script>
+    <script src="js/autoSave.js"></script>
     <script src="js/dataLoader.js"></script>
     <script src="js/uiInteractions.js"></script>
 </body>
