제목 표시 아이콘을 icon.ico로 변경

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -15,7 +15,7 @@
         <div class="titlebar">
             <div class="titlebar-drag">
                 <div class="app-title">
-                    <span class="app-icon">📝</span>
+                    <img src="../../icon.ico" alt="TodoNote" class="app-icon">
                     TodoNote v2
                 </div>
             </div>
